--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@detalk/static",
-  "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.1.5",
+  "description": "The fastest way to use detalk on your website.",
+  "main": "dist/detalk.js",
   "scripts": {
     "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production"
@@ -24,5 +24,9 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oCoke/detalk-static.git"
   }
 }
