--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "dist/detalk.js",
   "scripts": {
     "dev": "webpack --config webpack.dev.js --mode=development --watch",
-    "build": "webpack --mode=production"
+    "build": "webpack --config webpack.config.js --mode=production",
+    "build@nocss": "webpack --config webpack.css.js --mode=production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
     "dayjs": "^1.11.7",
     "html-webpack-plugin": "^5.5.0",
     "js-md5": "^0.7.3",
+    "markdown-it": "^13.0.1",
+    "marked": "^4.2.5",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
