--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@detalk/static",
-  "version": "1.1.5",
+  "version": "1.1.5-alpha",
   "description": "The fastest way to use detalk on your website.",
   "main": "dist/detalk.js",
   "scripts": {
