--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "dayjs": "^1.11.7",
     "html-webpack-plugin": "^5.5.0",
     "js-md5": "^0.7.3",
-    "markdown-it": "^13.0.1",
     "marked": "^4.2.5",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
@@ -25,6 +24,8 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.3",
     "style-loader": "^3.3.1"
   },
