--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@detalk/static",
-  "version": "1.1.6-alpha",
+  "version": "1.2.0-alpha",
   "description": "The fastest way to use detalk on your website.",
   "main": "dist/detalk.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
