--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^5.5.0",
     "js-md5": "^0.7.3",
     "marked": "^4.2.5",
+    "owo": "^1.0.2",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
     "webpack": "^5.75.0",
